move ww compat structure processors to datagen w/new serialization requirement config predicates