@@ -17,13 +17,20 @@
 
 package net.frozenblock.trailiertales.data.worldgen.structure;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
+import java.util.Optional;
+import net.frozenblock.lib.config.v2.entry.predicates.ConfigPredicate;
+import net.frozenblock.lib.levelgen.structure.api.processor.BlockStateRespectingProcessorRule;
+import net.frozenblock.lib.levelgen.structure.api.processor.BlockStateRespectingRuleProcessor;
 import net.frozenblock.lib.levelgen.structure.api.processor.StructureProcessorListAdditions;
 import net.frozenblock.lib.levelgen.structure.impl.processor.StructureProcessorListAddition;
+import net.frozenblock.lib.registry.FrozenLibRegistries;
 import net.frozenblock.trailiertales.TTConstants;
 import net.frozenblock.trailiertales.config.TTWorldgenConfig;
 import net.frozenblock.trailiertales.registry.TTBlocks;
+import net.frozenblock.trailiertales.registry.TTConfigPredicates;
+import net.frozenblock.wilderwild.config.WWBlockConfig;
+import net.frozenblock.wilderwild.registry.WWBlocks;
 import net.minecraft.core.Direction;
 import net.minecraft.core.HolderGetter;
 import net.minecraft.core.HolderSet;
@@ -34,6 +41,7 @@ import net.minecraft.world.level.block.RotatedPillarBlock;
 import net.minecraft.world.level.levelgen.structure.BuiltinStructures;
 import net.minecraft.world.level.levelgen.structure.Structure;
 import net.minecraft.world.level.levelgen.structure.templatesystem.AlwaysTrueTest;
+import net.minecraft.world.level.levelgen.structure.templatesystem.BlockMatchTest;
 import net.minecraft.world.level.levelgen.structure.templatesystem.ProcessorRule;
 import net.minecraft.world.level.levelgen.structure.templatesystem.RandomBlockMatchTest;
 import net.minecraft.world.level.levelgen.structure.templatesystem.RandomBlockStateMatchTest;
@@ -43,6 +51,7 @@ public final class TTStructureProcessorListAdditions {
 
 	public static void bootstrap(BootstrapContext<StructureProcessorListAddition> context) {
 		final HolderGetter<Structure> structures = context.lookup(Registries.STRUCTURE);
+		final HolderGetter<ConfigPredicate> configPredicates = context.lookup(FrozenLibRegistries.CONFIG_PREDICATE_PROVIDER);
 
 		StructureProcessorListAdditions.register(
 			context,
@@ -50,7 +59,7 @@ public final class TTStructureProcessorListAdditions {
 			HolderSet.direct(structures.getOrThrow(BuiltinStructures.END_CITY)),
 			List.of(
 				new RuleProcessor(
-					ImmutableList.of(
+					List.of(
 						new ProcessorRule(
 							new RandomBlockMatchTest(Blocks.END_STONE_BRICKS, 0.2F),
 							AlwaysTrueTest.INSTANCE,
@@ -73,7 +82,7 @@ public final class TTStructureProcessorListAdditions {
 			HolderSet.direct(structures.getOrThrow(BuiltinStructures.END_CITY)),
 			List.of(
 				new RuleProcessor(
-					ImmutableList.of(
+					List.of(
 						new ProcessorRule(
 							new RandomBlockMatchTest(Blocks.END_STONE_BRICKS, 0.05F),
 							AlwaysTrueTest.INSTANCE,
@@ -91,7 +100,7 @@ public final class TTStructureProcessorListAdditions {
 			HolderSet.direct(structures.getOrThrow(BuiltinStructures.END_CITY)),
 			List.of(
 				new RuleProcessor(
-					ImmutableList.of(
+					List.of(
 						new ProcessorRule(
 							new RandomBlockStateMatchTest(Blocks.PURPUR_PILLAR.defaultBlockState().setValue(RotatedPillarBlock.AXIS, Direction.Axis.X), 0.4F),
 							AlwaysTrueTest.INSTANCE,
@@ -106,6 +115,49 @@ public final class TTStructureProcessorListAdditions {
 				)
 			),
 			TTWorldgenConfig.END_CITY_CHISELED_GENERATION.equalTo(true)
+		);
+
+		// WILDER WILD
+		StructureProcessorListAdditions.register(
+			context,
+			TTConstants.id("savanna_ruins_wilder_wild"),
+			HolderSet.direct(structures.getOrThrow(SavannaRuinsGenerator.SAVANNA_RUIN_KEY)),
+			List.of(
+				new RuleProcessor(
+					List.of(
+						new ProcessorRule(new RandomBlockMatchTest(Blocks.MUD_BRICKS, 0.2F), AlwaysTrueTest.INSTANCE, WWBlocks.CRACKED_MUD_BRICKS.get().defaultBlockState()),
+						new ProcessorRule(new RandomBlockMatchTest(Blocks.MUD_BRICKS, 0.05F), AlwaysTrueTest.INSTANCE, WWBlocks.MOSSY_MUD_BRICKS.get().defaultBlockState())
+					)
+				),
+				new BlockStateRespectingRuleProcessor(
+					List.of(
+						new BlockStateRespectingProcessorRule(new RandomBlockMatchTest(Blocks.MUD_BRICK_STAIRS, 0.05F), AlwaysTrueTest.INSTANCE, WWBlocks.MOSSY_MUD_BRICK_STAIRS.get()),
+						new BlockStateRespectingProcessorRule(new RandomBlockMatchTest(Blocks.MUD_BRICK_SLAB, 0.05F), AlwaysTrueTest.INSTANCE, WWBlocks.MOSSY_MUD_BRICK_SLAB.get()),
+						new BlockStateRespectingProcessorRule(new RandomBlockMatchTest(Blocks.MUD_BRICK_SLAB, 0.05F), AlwaysTrueTest.INSTANCE, WWBlocks.MOSSY_MUD_BRICK_WALL.get())
+					)
+				)
+			),
+			Optional.empty(),
+			configPredicates.getOrThrow(TTConfigPredicates.HAS_WILDER_WILD)
+		);
+
+		StructureProcessorListAdditions.register(
+			context,
+			TTConstants.id("catacombs_wilder_wild"),
+			HolderSet.direct(structures.getOrThrow(CatacombsGenerator.CATACOMBS_KEY)),
+			List.of(
+				new BlockStateRespectingRuleProcessor(
+					List.of(
+						new BlockStateRespectingProcessorRule(new BlockMatchTest(Blocks.CHEST), AlwaysTrueTest.INSTANCE, WWBlocks.STONE_CHEST.get())
+					)
+				)
+			),
+			ConfigPredicate.withFallback(
+				WWBlockConfig.ADD_STONE_CHESTS,
+				WWBlockConfig.ADD_STONE_CHESTS.equalTo(true).asHolder(),
+				ConfigPredicate.not(ConfigPredicate.alwaysTrue()).asHolder()
+			).asHolder(),
+			configPredicates.getOrThrow(TTConfigPredicates.HAS_WILDER_WILD)
 		);
 	}
 
